# ponpoko

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  utils.py
nlp/: tokenizer.py  vocabulary.py  w2v.py
ponpoko/: __init__.py  math.py  utils.py
ponpoko/nlp/: augumentor.py  embedding.py  lda.py  swem.py  texttrans.py  tokenizer.py  transforms.py  vocabulary.py  w2v.py
ponpoko/nlp/models/: __init__.py  awdlstm.py  reg_lstm.py  utils.py
ponpoko/nn/: infer.py  metircs.py  models.py  sampler.py  trainer.py  utils.py
ponpoko/tableur/: encoder.py  utils.py
ponpoko/tabular/: encoder.py  functional.py  stacking.py  validation.py
ponpoko/utils/: __init__.py  configs.py  kaggle.py  logging.py  utils.py
sample_dataset/: dataset-metadata.json
tableur/: aggregator.py
