[tool.poetry]
name = "ponpoko"
version = "0.1.0"
description = ""
authors = ["ktrw <ktr.w1011@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gensim = "^3.8.3"
nltk = "^3.5"
numpy = "^1.19.2"
pandas = "^1.1.2"
joblib = "^0.16.0"
tqdm = "^4.49.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
